# shardeum

./: .dockerignore  .env_example  .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitmodules  .nycrc  .yarnrc.yml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE_SHARDUS  README.md  archiver-db.idx.db  client.js  config.json  dapps_100_node.patch  data.txt  debug-0-starting-balance.patch  debug-10-nodes.patch  debug-100-nodes.patch  debug-20-nodes.patch  debug-25-nodes.patch  debug-300-nodes.patch  debug-5-nodes-full-logs.patch  debug-5-nodes.patch  debug118.patch  dev.Dockerfile  devKeys-10.patch  dev_300.patch  dev_setting_use_test_key.patch  dev_settings.patch  flake.nix  full-logs.patch  genesis_block.json  index.d.ts  itn500.patch  itnPhase1.patch  itn_settings.patch  (+22 more)
.appsec/: secrets.baseline
.devcontainer/: devcontainer.json  install-shardus-cli.sh
.pm2/: pm2.pid  touch
db/: db.sqlite
docs/: AALG-warm-up.md
scripts/: accountsSyncCheck.ts  accountsVariantsCheck.ts  addRow.ts  build-docker.js  clean.js  dataRestore.ts  dataRestore2.ts  dbHistory.ts  debug-clear-tx-queue.js  debug-stuck-txs.js  debugCycleRecords.ts  dupeTxNonceCheck.ts  failedTxCheck.ts  generateDevKeys.js  generateWallet.js  push-docker.js  start.js  stop.js  types.ts  writeDataToDBs.ts
src/: endpoints.ts  index.ts  initialNetworkParameters.ts
src/utils/ecrecover/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/utils/ecrecover/src/: lib.rs
test/: README.md  autoScaleNet.test.ts  autoScaleNet.test.ts.disabled  dataSyncTest.ts  index.test.ts  (+9 more)
(+422 files in other folders)
