[package]
name = "ecrecover"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.8"
secp256k1 = { version = "0.20", features = ["recovery"] }
hex = "0.4.3"


[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
